First screen of the app finished.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.calculator.MainActivity"
+    tools:context="com.example.android.cordcalculator.MainActivity"
     android:background="@color/defaultWhite">
 
     <LinearLayout
@@ -14,10 +14,10 @@
 
         <TextView
             android:id="@+id/string_welcome"
-            style="@style/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/welcome" />
+            android:text="@string/welcome"
+            style="@style/welcome_text" />
 
         <ImageView
             android:id="@+id/logo_first_screen"
