--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start"
-            style="@style/button_start"/>
+            style="@style/button_start"
+            android:onClick="openFirstStep" />
 
     </LinearLayout>
 
